keep nav on top

--- a/style.css
+++ b/style.css
@@ -7,8 +7,15 @@
 nav {
     padding: 15px 79px;
     align-items: flex-start;
-    background: var(--primary, #32325D);
+    background: #32325D;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+header {
+    padding-bottom: 60px;
 }
 
 header li {
