--- a/style.css
+++ b/style.css
@@ -42,3 +42,66 @@ header ul {
     height: 28px;
     flex-shrink: 0;
 }
+
+#posts {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 50px 70px;
+    justify-content: space-evenly;
+    row-gap: 50px;
+}
+
+.post-container {
+    width: 300px;
+    height: 346px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 8px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.post-image {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.post-title {
+    color: #3A4F9A;
+    font-size: 20px;
+    font-family: sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: 2px;
+}
+
+.post-paragraph {
+    color: #575757;
+    font-size: 13px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 20px;
+    letter-spacing: 1.3px;
+}
+
+.post-link {
+    color: #3A4F9A;
+    font-size: 13px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 20px;
+    letter-spacing: 1.3px;
+}
+
+.post-body {
+    padding: 10px 10px 0;
+}
+
+.post-footer {
+    align-self: flex-end;
+    padding: 10px;
+}
