--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 nav {
-    padding: 15px 79px;
+    padding: 15px 125px;
     align-items: flex-start;
     background: #32325D;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
@@ -99,9 +99,45 @@ header ul {
 
 .post-body {
     padding: 10px 10px 0;
+    height: 100px;
+    overflow: hidden;
 }
 
 .post-footer {
     align-self: flex-end;
     padding: 10px;
+}
+
+::-webkit-scrollbar {
+    width: 13px;
+    height: 637px;
+    flex-shrink: 0;
+
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+::-webkit-scrollbar-track {
+    background-color: #ffffff;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(58, 79, 154, 0.30);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(58, 79, 154, 0.30);
+}
+
+.main-title {
+    color: #3A4F9A;
+    font-size: 36px;
+    font-family: sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 20px;
+    letter-spacing: 3.6px;
+    padding: 80px 0px 11px 125px;
+    text-decoration: underline;
+    text-underline-offset: 16px;
 }
