text ellipsis in post thumbnail

--- a/style.css
+++ b/style.css
@@ -88,6 +88,11 @@ header ul {
     line-height: 20px;
     letter-spacing: 1.3px;
     cursor: pointer;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    white-space: pre-wrap;
 }
 
 .post-link {
