--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+    --full-post-max-width: 1200px;
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -156,8 +160,17 @@ body>.content-wrapper {
     text-wrap: nowrap;
 }
 
+#full-post-page {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 1rem 0 0 0;
+    justify-content: space-around;
+}
+
 .full-post-page-post-container {
-    width: 771px;
+    width: 100%;
+    max-width: var(--full-post-max-width);
     display: flex;
     flex-direction: column;
     border-radius: 8px;
@@ -169,12 +182,11 @@ body>.content-wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 40px 0px;
+    padding: 1rem 0;
 }
 
 .full-post-page-post-image {
     width: 100%;
-    height: 380px;
     object-fit: cover;
 }
 
@@ -198,35 +210,48 @@ body>.content-wrapper {
 }
 
 .full-post-page-post-body {
-    padding: 40px 70px 30px;
+    padding: 2rem 0;
 }
 
 .back-btn {
     background-color: #32325D;
     display: flex;
-    position: fixed;
-    top: 80px;
-    left: 20px;
+    width: 2rem;
+    height: 2rem;
+    align-self: center;
+    /* position: fixed; */
+    /* top: 50%; */
+    /* left: 40%; */
     border-radius: 50%;
-    padding: 8px;
+    padding: 2px;
     cursor: pointer;
+}
+
+.back-btn img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .comments-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 45px;
+    padding-bottom: 3rem;
+    width: 100%;
+    max-width: var(--full-post-max-width);
+    ;
 }
 
 .comments {
-    width: 771px;
+    width: 100%;
+    max-width: var(--full-post-max-width);
+    ;
     display: flex;
     flex-direction: column;
     border-radius: 8px;
     background: #FFFFFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    padding: 30px 70px 30px;
 }
 
 .comment-item-user {
@@ -248,8 +273,12 @@ body>.content-wrapper {
 }
 
 .comment-container {
-    padding: 25px 0px;
+    padding: 1rem 0;
     border-bottom: 0.5px solid #575757
+}
+
+.comment-container:last-child {
+    border-bottom: none;
 }
 
 .error-message {
@@ -269,13 +298,38 @@ body>.content-wrapper {
     .error-message {
         display: block;
         margin: 1rem 0rem;
-        font-size: 1.5rem;
+        font-size: 7vw;
         color: red;
         border: 5px solid red;
         text-align: justify;
-
         white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
+    }
+}
+
+@media screen and (min-width: 500px) {
+
+    .full-post-page-post-body {
+        padding: 2rem 2rem;
+    }
+
+    #full-post-page {
+        padding: 1rem 2rem 0;
+    }
+
+    .comments {
+        width: 100%;
+        padding: 1rem;
+    }
+
+    .full-post-page-post-image {
+        width: 100%;
+        object-fit: contain;
+        max-height: 50vh;
+    }
+
+    .full-post-page-post-header {
+        background-size: 1000%;
     }
 }
